[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Zachary Westerman <westerman.zachary@gmail.com>"]
license = "GPL 3"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ariadne = "^0.15.1"
Flask = "^2.1.2"
pymongo = "^4.1.1"
bcrypt = "^3.2.2"
PyJWT = "^2.4.0"
cryptography = ">=39.0.1"
requests = "^2.28.2"
aspose-3d = "^23.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
