[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Zachary Westerman <westerman.zachary@gmail.com>"]
license = "GPL 3"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ariadne = "^0.15.1"
Flask = "^2.1.2"
pymongo = "^4.1.1"
bcrypt = "^3.2.2"
PyJWT = "^2.4.0"
cryptography = ">=39.0.1"
requests = "^2.28.2"
Pillow = "^10.0.0"
pyzxing = "^1.0.2"
qrcode = "^7.4.2"
Markdown = "^3.4.4"
aiohttp = "^3.8.5"
cachetools = "^5.3.1"
psutil = "^5.9.6"
pywebpush = "^1.14.0"
trimesh = "^4.4.7"
waitress = "^3.0.0"
imageio = {extras = ["ffmpeg"], version = "^2.36.0"}
networkx = "^3.4.2"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.2.0"
pydata-sphinx-theme = "^0.16.1"
sphinx-mdinclude = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
